added property with add-opens,add-exports JVM args, removed illegal-access=permit arg which was dropped with JDK 17, removed unsupported jetty plugin property